--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
         <div class="doscajas">
             <div class="informacion">
                 <p class="w400">Hello</p>
-                <p class="w700">I' am Kattie</p>
+                <p class="w700">I'm Marco Antonio</p>
                 <p class="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                     has
                     been the industry's standard dummy text ever since the 1500s.</p>
                 <button>About Me</button>
             </div>
-            <div class="foto">
-
-            </div>
+            <div class="foto"></div>
         </div>
-        <div class="doscajas">
+        <div class="aboutme">
             <div class="cajitas">
                 <div class="cajanegra"></div>
                 <div class="cajarosada"></div>
@@ -47,7 +45,28 @@
             <p class="lorems10">It is a long established fact that a reader will be distracted by the readable content
                 of a page when looking at its layout.</p>
         </div>
-        <div class="trescajas">
+                <!-- Cambio -->
+        <div class="grilla1">
+            <div class="caja1">
+                <p class="interiorcaja">Graphic Design</p>
+            </div>
+            <div class="caja2">
+                <p class="interiorcaja">Graphic Design</p>
+            </div>
+            <div class="caja3">
+                <p class="interiorcaja">Graphic Design</p>
+            </div>
+            <div class="caja4">
+                <p class="interiorcaja">Graphic Design</p>
+            </div>
+            <div class="caja5">
+                <p class="interiorcaja">Graphic Design</p>
+            </div>
+            <div class="caja6">
+                <p class="interiorcaja">Graphic Design</p>
+            </div>
+        </div>
+        <!-- <div class="trescajas">
             <div class="caja1">
                 <p class="interiorcaja">Graphic Design</p>
             </div>
@@ -68,14 +87,15 @@
             <div class="caja6">
                 <p class="interiorcaja">Graphic Design</p>
             </div>
-        </div>
+        </div> -->
+        <!-- FIN Cambio -->
         <div class="work">
             <p class="w700">Latest Work</p>
             <p class="lorems10 separacion17">It is a long established fact that a reader will be distracted by the
                 readable content
                 of a page when looking at its layout.</p>
         </div>
-        <div class="trescajas">
+        <div class="grilla2">
             <div class="caja7"></div>
             <div class="caja8"></div>
             <div class="caja9"></div>
@@ -85,7 +105,7 @@
             <p class="lorems10">It is a long established fact that a reader will be distracted by the readable content
                 of a page when looking at its layout.</p>
         </div>
-        <div class="trescajas">
+        <div class="grilla3">
             <div class="caja10">
                 <p class="lorems10">It is a long</p>
                 <p class="w700s20">Graphic Design</p>
@@ -96,7 +116,7 @@
                 <p class="lorems10">It is a long</p>
                 <p class="w700s20">Graphic Design</p>
                 <p class="textodentrocaja">It is a long established fact that a reader will be distracted by the readable content of a page when
-                    looking at its layout.</p>
+                    looking  at its layout.</p>
             </div>
             <div class="caja12">
                 <p class="lorems10">It is a long</p>
