--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     of a page when
                     looking at its layout.</p>
                 <div class="circulos">
-                    <div class="circulo"></div>
+                    <div class="circulo1"></div>
                     <div class="circulo"></div>
                     <div class="circulo"></div>
                 </div>
