--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     looking at its layout.</p>
                 <div class="circulos">
                     <div class="circulo1"></div>
-                    <div class="circulo"></div>
-                    <div class="circulo"></div>
+                    <div class="circulo2"></div>
+                    <div class="circulo3"></div>
                 </div>
             </div>
         </div>
